--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,14 @@
         "useBuiltIns": "usage",
         "corejs": "3.0.0"
       }
+    ],
+    [
+      "@babel/preset-react",
+      {
+        "pragma": "fw.dom", // default pragma is React.createElement
+        "pragmaFrag": "", // default is React.Fragment
+        "throwIfNamespace": false // defaults to true
+      }
     ]
   ],
   "plugins": [
