--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
-    "core-js": "^3.6.4"
+    "@babel/preset-react": "^7.8.3",
+    "core-js": "^3.6.4",
+    "ians-fw": "^1.4.4",
+    "workbox-webpack-plugin": "^5.0.0"
   }
 }
